force-app/main/default/objects/RedeemVoucherTransaction__e/RedeemVoucherTransaction__e.object-meta.xml
<CustomObject>
    <description>Platform event being used to Redeem voucher as part of Accrual process. TODO: Rename API Name to align with Naming convention</description>
    <label>Redeem Voucher Transaction</label>
    <pluralLabel>RedeemVoucherTransactions</pluralLabel>
</CustomObject>