force-app/main/default/objects/RedeemVoucherTransaction__e/fields/Order_Id_Redeem__c.field-meta.xml
<CustomField>
    <fullName>Order_Id_Redeem__c</fullName>
    <label>Order Id Redeem</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>