force-app/main/default/objects/RedeemVoucherTransaction__e/fields/Order_Id_Redeem_Channel__c.field-meta.xml
<CustomField>
    <fullName>Order_Id_Redeem_Channel__c</fullName>
    <label>Order Id Redeem Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>