force-app/main/default/objects/RedeemVoucherTransaction__e/fields/Voucher_Code_Issued__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code_Issued__c</fullName>
    <label>Voucher Code Issue</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>